--- a/st-theme/style.css
+++ b/st-theme/style.css
@@ -128,74 +128,9 @@ section {
   .navbar .navbar-brand {
     max-width: 15%; }
 
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 245px;
-  height: 35px; }
-  .switch p {
-    position: absolute;
-    top: 5px;
-    font-weight: 600; }
-  .switch #toggle-businesses {
-    left: 12px; }
-  .switch #toggle-volunteers {
-    right: 30px; }
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0; }
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #f6c253;
-  -webkit-transition: .4s;
-  transition: .4s; }
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 35px;
-  width: calc(245px/2);
-  left: 0;
-  bottom: 0;
-  background-color: #fafafa;
-  box-shadow: 0 0 5px 2px rgba(51, 51, 51, 0.719);
-  -webkit-transition: .4s;
-  transition: .4s; }
-
-#page-toggle {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 999; }
-
-.toggle-switch-animation input:checked + .slider:before {
-  -webkit-transform: translateX(calc(245px/2));
-  -ms-transform: translateX(calc(245px/2));
-  transform: translateX(calc(245px/2)); }
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-  box-shadow: 0 0 5px 2px rgba(51, 51, 51, 0.719); }
-
-.slider.round:before {
-  border-radius: 230px; }
-
 @media (max-width: 991px) {
   #logo {
-    width: 60% !important; }
-  .navbar-collapse ul {
-    margin-top: 5vh; }
-  .navbar-collapse li {
-    text-align: center; } }
+    width: 60% !important; } }
 
 .path {
   stroke-dasharray: 1000;
@@ -318,3 +253,63 @@ footer {
     margin-bottom: 25px; } }
 
 /* Desktop and larger */
+.switch {
+  position: relative;
+  display: inline-block;
+  margin: 20px 5px;
+  width: 245px;
+  height: 50px; }
+  .switch p {
+    position: absolute;
+    top: 12.5px;
+    font-weight: 600; }
+  .switch #toggle-businesses {
+    left: 12px; }
+  .switch #toggle-volunteers {
+    right: 30px; }
+
+.switch input {
+  cursor: pointer;
+  opacity: 0;
+  width: 0;
+  height: 0; }
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #f6c253;
+  -webkit-transition: .4s;
+  transition: .4s; }
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: calc(50px - 8px);
+  width: calc(calc(245px/2) - 8px);
+  left: 4px;
+  bottom: 4px;
+  background-color: #fafafa;
+  -webkit-transition: .4s;
+  transition: .4s; }
+
+#page-toggle {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 999; }
+
+.toggle-switch-animation input:checked + .slider:before {
+  -webkit-transform: translateX(calc(245px/2));
+  -ms-transform: translateX(calc(245px/2));
+  transform: translateX(calc(245px/2)); }
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 5px; }
+
+.slider.round:before {
+  border-radius: 5px;
+  box-shadow: 0 0 4px 2px rgba(51, 51, 51, 0.438); }
